# mcp-dienstleistungen

./: .gitignore  LICENSE  QUICKSTART.md  README.md  claude_desktop_config.example.json  package-lock.json  package.json  pyproject.toml  test_local.sh  test_server.py
src/: index.ts
src/berlin_services_mcp/: __init__.py  __main__.py  server.py
